# ai_film_studio

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.bat  setup.py  setup.sh
asset_generation/image_gen/: image_generator.py  prompts.txt
project_req/: project_requirements.md
story_team/: agents.py  base_agent.py  callbacks.py  coordinator.py  models.py  run.py  state.py
tests/: test_story_team.py
utils/: config.py  json_helpers.py
