[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_film_studio"
version = "0.1.0"
description = "AI Film Production Studio" 

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: mark test as async",
] 

[tool.poetry.dependencies]
python = "^3.9"
langgraph = "^0.0.17"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1" 